# mcp-dev-guide

./: .gitignore  README.md
01_gnews-server/: README.md  pyproject.toml
01_gnews-server/schemas/: schema.json
01_gnews-server/src/gnews_server/: __init__.py  server.py
02_remote-mcp-fastapi/: README.md  pyproject.toml
03_mcp-fastapi-auth/: .env.example  README.md
03_mcp-fastapi-auth/src/: auth.py  server.py  tavily_mcp.py
04_simple-mcp-rag/: .env.example  .gitignore  README.md  agentic_rag_intro.ipynb  chromadb_utils.py  rag_server.py
05_demo-gnews-remotemcp-auth/: README.md
