[project]
name = "gnews-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.28.0",
    "httpx>=0.27.0",
]

[project.scripts]
gnews-server = "gnews_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnews_server"]
